父亲节快乐-代码提交

--- a/father.html
+++ b/father.html
@@ -348,7 +348,7 @@ var S = {
     if (i !== -1) {
       S.UI.simulate(decodeURI(action).substring(i + 3));
     } else {
-      S.UI.simulate('|#countdown 3||慈父恩如山|岁月染双鬓|目光仍坚毅|幼时伴身旁|父爱润心田|教我勇向前|言行担责任|今日父亲节|愿父心欢畅|体魄皆强健|余生常相伴|老爸我爱您❤|');
+      S.UI.simulate('|#countdown 3||敬爱的老爸||赠您五言韵||慈父恩如山|岁月染双鬓|目光仍坚毅|幼时伴身旁|父爱润心田|教我勇向前|言行担责任|往昔忆无穷|陪伴似暖阳|挫折亦同扛|教诲耳边响|指引人生路|步履总铿锵|生活虽奔忙|关爱未离场|今日父亲节|愿父心欢畅|体魄皆强健|笑颜永绽放|时光慢流淌|余生常相伴|老爸我爱您❤|');
     }
 
     S.Drawing.loop(function () {
