--- a/index.html
+++ b/index.html
@@ -30,11 +30,6 @@ html,body{
 
 </head>
 <body class="body--ready">
-   <a href="https://mp.weixin.qq.com/s/oxLqXBcLCT8ij67DjkW2kw" class="hide_buttom" style="position: fixed;top: 10%;right: 10px;width: 35px;height: 35px;z-index: 999;background: #696969;border-radius: 50%;padding: 1.0px;text-align: center;color: #ddd;text-decoration: none;   clear: both; line-height: 35px; 	margin:auto;   font-size: 13px;">制作</a>
-  <a href="https://mp.weixin.qq.com/s/KA3nFLUB5W8f1BIyd_g0cg" class="hide_buttom" style="position: fixed;top: 4%;right: 10px;width: 35px;height: 35px;z-index: 998;background: #696969;border-radius: 50%;padding: 1.0px;text-align: center;color: #ddd;text-decoration: none;   clear: both; line-height: 35px; 	margin:auto;   font-size: 13px;">更多</a>
-          <a href="https://pan.quark.cn/s/3344d23e48a8" class="hide_buttom" style="position: fixed;top: 16%;right: 10px;width: 35px;height: 35px;z-index: 997;background: #696969;border-radius: 50%;padding: 1.0px;text-align: center;color: #ddd;text-decoration: none;   clear: both; line-height: 35px; 	margin:auto;   font-size: 13px;">源码</a>
-  <a href="https://shop1619956412.v.weidian.com/?userid=1619956412&amp;spider_token=2720" class="hide_buttom" style="position: fixed;top: 22%;right: 10px;width: 35px;height: 35px;z-index: 996;background: #696969;border-radius: 50%;padding: 1.0px;text-align: center;color: #ddd;text-decoration: none;   clear: both; line-height: 35px; 	margin:auto;   font-size: 13px;">红包</a>
-
 <canvas id="canvas" style="position:absolute;width:100%;height:100%;z-index:8888" width="1357" height="954"></canvas>
 <canvas style="position:absolute;width:100%;height:100%;z-index:9999" class="canvas" width="1357" height="954"></canvas>
 <div class="overlay">
@@ -1012,11 +1007,6 @@ S.init();
 </head>
 
 <body>
- <a href="https://mp.weixin.qq.com/s/oxLqXBcLCT8ij67DjkW2kw" style="position: fixed; top: 5%; right: 10px; width: 30px; height: 30px; z-index: 1000; background: #696969; border-radius: 50%; padding: 1.0px; text-align: center; color: #ddd; text-decoration: none; line-height: 30px; font-size: 11px;">制作</a>
-<a href="https://pan.quark.cn/s/3344d23e48a8" style="position: fixed; top: 20%; right: 10px; width: 30px; height: 30px; z-index: 997; background: #696969; border-radius: 50%; padding: 1.0px; text-align: center; color: #ddd; text-decoration: none; line-height: 30px; font-size: 11px;">源码</a>
- <a href="https://drive.uc.cn/s/4819fdecb8a24" style="position: fixed; top: 15%; right: 10px; width: 30px; height: 30px; z-index: 998; background: #696969; border-radius: 50%; padding: 1.0px; text-align: center; color: #ddd; text-decoration: none; line-height: 30px; font-size: 11px;">代码</a>
- <a href="https://pan.xunlei.com/s/VNlDcB3ABz0oNSOEv5mpSE_tA1?pwd=97rw#" style="position: fixed; top: 10%; right: 10px; width: 30px; height: 30px; z-index: 999; background: #696969; border-radius: 50%; padding: 1.0px; text-align: center; color: #ddd; text-decoration: none; line-height: 30px; font-size: 11px;">合集</a>
-<a href="https://shop1619956412.v.weidian.com/?userid=1619956412&spider_token=2720" style="position: fixed; top: 25%; right: 10px; width: 30px; height: 30px; z-index: 996; background: #696969; border-radius: 50%; padding: 1.0px; text-align: center; color: #ddd; text-decoration: none; line-height: 30px; font-size: 11px;">红包</a>
 
 <canvas id="canvas"></canvas>
     <style type="text/css">
@@ -1066,4 +1056,17 @@ S.init();
         }
         setInterval(draw, 33);
     </script>
+<a id="musicBtn" href="javascript:;" style="position: fixed;top: 30%;right: 10px;width: 35px;height: 35px;z-index: 9999;background: #696969;border-radius: 50%;padding: 1.0px;text-align: center;color: #ddd;text-decoration: none;line-height: 35px;font-size: 13px;">♪</a>
 </body>
+
+<script>
+document.getElementById('musicBtn').addEventListener('click', function() {
+  const audio = document.getElementById('backgroundMusic');
+  audio.muted = false;
+  audio.play().catch(() => {
+    this.style.background = '#ff4444';
+  });
+  this.textContent = audio.paused ? '♪' : '▌▌';
+});
+</script>
+</html>
